feat: add link styles

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>RocketCoffee</title>
 </head>
 <body>
@@ -21,7 +22,7 @@
                     <p class="description">Porro, facilis minima accusantium libero officiis cumque sint ea at blanditiis . </p>
                 </div>
 
-                <strong class="price">R$ 27.90</strong>
+                <strong class="price">R$27.90</strong>
             </li>
 
             <li>
@@ -30,7 +31,7 @@
                     <p class="description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. </p>
                 </div>
 
-                <strong class="price">R$ 28.50</strong>
+                <strong class="price">R$28.50</strong>
             </li>
         </ul>
     </section>
