feat: menu structure

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>RocketCoffee</h1>
+        <h1>Rocket<span>Coffee</span></h1>
         <p>Aberto todos os dias. 8h - 22h</p>
     </header>
 
@@ -27,14 +27,53 @@
 
             <li>
                 <div class="details">
-                    <h3>Doce de maça</h3>
+                    <h3>Doce de maçã</h3>
                     <p class="description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. </p>
                 </div>
 
                 <strong class="price">R$28.50</strong>
             </li>
+            <li>
+                <div class="details">
+                    <h3>Pão na manteiga</h3>
+                    <p class="description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. </p>
+                </div>
+
+                <strong class="price">R$12.25</strong>
+            </li>
         </ul>
     </section>
 
+    <section>
+        <h2>Bebidas</h2>
+        <ul>
+            
+
+            <li>
+                <div class="details">
+                    <h3>Café expresso</h3>
+                    <p class="description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. </p>
+                </div>
+
+                <strong class="price">R$11.50</strong>
+            </li>
+            <li>
+                <div class="details">
+                    <h3>Capuccino</h3>
+                    <p class="description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. </p>
+                </div>
+
+                <strong class="price">R$12.00</strong>
+            </li>
+            <li>
+                <div class="details">
+                    <h3>Suco de laranja</h3>
+                    <p class="description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. </p>
+                </div>
+
+                <strong class="price">R$9.90</strong>
+            </li>
+        </ul>
+    </section>
 </body>
 </html>
