--- a/src/index.html
+++ b/src/index.html
@@ -1,83 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="preconnect" href="https://fonts.googleapis.com"> 
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Serif:opsz,wght@8..144,700&display=swap" rel="stylesheet">
+  <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Serif:opsz,wght@8..144,700&display=swap"
+      rel="stylesheet"
+    />
 
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>RocketCoffee</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <h1>Rocket<span>Coffee</span></h1>
-        <p>Aberto todos os dias. 8h-22h</p>
+      <h1>Rocket<span>Coffee</span></h1>
+      <p>Aberto todos os dias.</p>
+      <p>8h-22h</p>
     </header>
 
     <section>
-        <h2>Brunch</h2>
-        <ul>
-            <li>
-                <div class="details">
-                    <h3>Waffle doce</h3>
-                    <p class="description">Porro, facilis minima accusantium libero officiis cumque sint ea at blanditiis . </p>
-                </div>
+      <h2>Brunch</h2>
+      <ul>
+        <li>
+          <div class="details">
+            <h3>Waffle doce</h3>
+            <p class="description">
+              Porro, facilis minima accusantium libero officiis cumque sint ea
+              at blanditiis .
+            </p>
+          </div>
 
-                <strong class="price">R$27.90</strong>
-            </li>
+          <strong class="price">R$27.90</strong>
+        </li>
 
-            <li>
-                <div class="details">
-                    <h3>Doce de maçã</h3>
-                    <p class="description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. </p>
-                </div>
+        <li>
+          <div class="details">
+            <h3>Doce de maçã</h3>
+            <p class="description">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+            </p>
+          </div>
 
-                <strong class="price">R$28.50</strong>
-            </li>
-            <li>
-                <div class="details">
-                    <h3>Pão na manteiga</h3>
-                    <p class="description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. </p>
-                </div>
+          <strong class="price">R$28.50</strong>
+        </li>
+        <li>
+          <div class="details">
+            <h3>Pão na manteiga</h3>
+            <p class="description">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+            </p>
+          </div>
 
-                <strong class="price">R$12.25</strong>
-            </li>
-        </ul>
+          <strong class="price">R$12.25</strong>
+        </li>
+      </ul>
     </section>
 
     <section>
-        <h2>Bebidas</h2>
-        <ul>
-            
+      <h2>Bebidas</h2>
+      <ul>
+        <li>
+          <div class="details">
+            <h3>Café expresso</h3>
+            <p class="description">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+            </p>
+          </div>
 
-            <li>
-                <div class="details">
-                    <h3>Café expresso</h3>
-                    <p class="description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. </p>
-                </div>
+          <strong class="price">R$11.50</strong>
+        </li>
+        <li>
+          <div class="details">
+            <h3>Capuccino</h3>
+            <p class="description">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+            </p>
+          </div>
 
-                <strong class="price">R$11.50</strong>
-            </li>
-            <li>
-                <div class="details">
-                    <h3>Capuccino</h3>
-                    <p class="description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. </p>
-                </div>
+          <strong class="price">R$12.00</strong>
+        </li>
+        <li>
+          <div class="details">
+            <h3>Suco de laranja</h3>
+            <p class="description">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+            </p>
+          </div>
 
-                <strong class="price">R$12.00</strong>
-            </li>
-            <li>
-                <div class="details">
-                    <h3>Suco de laranja</h3>
-                    <p class="description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. </p>
-                </div>
-
-                <strong class="price">R$9.90</strong>
-            </li>
-        </ul>
+          <strong class="price">R$9.90</strong>
+        </li>
+      </ul>
     </section>
-</body>
+  </body>
 </html>
